[gd_scene load_steps=4 format=3 uid="uid://dnktfik5n5mhp"]

[ext_resource type="Script" uid="uid://c5e4l88fnojul" path="res://scripts/ScoreScreen/score_screen.gd" id="1_gu7kj"]
[ext_resource type="Texture2D" uid="uid://cw1n07u1c2rju" path="res://assets/interface/pontuacao/pontuacao.png" id="2_68huu"]
[ext_resource type="Texture2D" uid="uid://d3lo75fip0r05" path="res://assets/interface/pontuacao/trofeu.png" id="3_g3dih"]

[node name="ScoreScreen" type="Node2D"]
script = ExtResource("1_gu7kj")

[node name="Fundo" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_68huu")

[node name="Trofeu" type="TextureRect" parent="."]
offset_left = 105.0
offset_top = 80.0
offset_right = 281.0
offset_bottom = 237.0
texture = ExtResource("3_g3dih")

[node name="LabelPontuacao" type="Label" parent="."]
offset_left = 77.0
offset_top = 305.0
offset_right = 313.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="LabelFeedback" type="Label" parent="."]
offset_left = 134.0
offset_top = 378.0
offset_right = 249.0
offset_bottom = 487.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="TextureButton" type="Button" parent="."]
offset_left = 57.0
offset_top = 600.0
offset_right = 337.0
offset_bottom = 666.0
flat = true

[node name="LabelButton" type="Label" parent="TextureButton"]
offset_left = 74.0
offset_top = -2.0
offset_right = 229.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
